--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
     <script src="node_modules/react-dom/dist/react-dom.js"></script>
   </head>
   <body>
-    <script type="module" src="client/dist/index.js">
-    <script type="module" src="client/dist/src/app.js">
-    <script type="module" src="client/dist/src/movieList.js">
-    <script type="module" src="client/dist/src/movieListEntry.js">
+    <script type="module" src="client/dist/movie-list.bundle.js">
   </body>
 </html>
