Got webpack to bundle

--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="utf-8">
     <title>Movie List</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="client/styles/style.css">
+    <!-- <link rel="stylesheet" href="styles/style.css"> -->
     <script src="node_modules/jquery/dist/jquery.js"></script>
-    <script src="node_modules/react/dist/react.js"></script>
-    <script src="node_modules/react-dom/dist/react-dom.js"></script>
   </head>
   <body>
-    <script type="module" src="client/dist/movie-list.bundle.js">
+    <div id="app"></div>
+    <script type="module" src="dist/movie-list.bundle.js"></script>
   </body>
 </html>
