--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Movie List</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="styles/style.css"> -->
-    <script src="node_modules/jquery/dist/jquery.js"></script>
+    <link rel="stylesheet" href="styles/style.css">
+    <script type="application/js" src="node_modules/jquery/dist/jquery.js"></script>
   </head>
   <body>
     <div id="app"></div>
