Adding on part 1, part 0 complete. Including a more robust readme.md
TODO:
Parts 2 and onward (there are at least 5?)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="application/js" src="node_modules/jquery/dist/jquery.js"></script>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="container"></div>
     <script type="module" src="dist/movie-list.bundle.js"></script>
   </body>
 </html>
