--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="application/js" src="node_modules/jquery/dist/jquery.js"></script>
   </head>
   <body>
-    <div id="app" class="container"></div>
+    <div id="app"></div>
     <script type="module" src="dist/movie-list.bundle.js"></script>
   </body>
 </html>
